src/test/resources/fail/ClassDeclaration_02x.groovy
class Foo {}
new Foo() {
    Foo() {}
}
